# edlc

./: .gitignore  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  FUNDING.md  LANGUAGE.md  LICENSE  LICENSE-GPL2  README.md  external_functions.md
documentation/: MOVE_SEMANTICS.md
edlc_analysis/: Cargo.toml
edlc_analysis/src/: graph.rs  lib.rs
edlc_analysis/src/graph/: builder.rs
edlc_analysis/tests/: sign_analysis.rs
edlc_codegen_cranelift/: Cargo.toml  README.md
edlc_codegen_cranelift/src/: codegen.rs  compiler.rs  error.rs  executor.rs  layout.rs  lib.rs  prelude.rs  trap.rs  unwind.rs
edlc_codegen_cranelift/src/codegen/: arrayinit_codegen.rs  as_codegen.rs  assign_codegen.rs  block_codegen.rs  break_codegen.rs  call_codegen.rs  cfg_codegen.rs  const_codegen.rs  constdef_codegen.rs  continue_codegen.rs  data_codegen.rs  global_codegen.rs  if_codegen.rs  layout.rs  let_codegen.rs  literal_codegen.rs  loop_codegen.rs  module_codegen.rs  ref_codegen.rs  return_codegen.rs  test.rs  type_init_codegen.rs  variable.rs  variable_codegen.rs
edlc_codegen_cranelift/src/codegen/variable/: value.rs
edlc_codegen_cranelift/src/compiler/: bool_math.rs  calling_convention.rs  code.rs  core_functions.rs  external_func.rs  float_math.rs  func.rs  integer_math.rs  panic_handle.rs  unwind_info.rs
edlc_codegen_cranelift/src/compiler/calling_convention/: system_v.rs
edlc_codegen_cranelift/src/executor/: macros.rs  test_executor.rs  test_setup.rs
edlc_codegen_cranelift/src/layout/: stack_frame.rs  sysv.rs
edlc_codegen_cranelift/src/unwind/: cfi.rs  range_vec.rs  signal_stack.rs  unix.rs  x86.rs
edlc_codegen_cranelift/test/test_bin/: Fracht.toml
edlc_codegen_cranelift/test/test_bin/src/: foo.eq  main.eq
edlc_codegen_cranelift/test/test_bin/src/foo/: boa.eq
edlc_codegen_cranelift/test/test_lib/: Fracht.toml
edlc_codegen_cranelift/test/test_lib/src/: lib.eq
edlc_codegen_cranelift/tests/: codegen.rs
edlc_core/: Cargo.toml  README.md
edlc_core/src/: ast.rs  compiler.rs  core.rs  documentation.rs  file.rs  hir.rs  issue.rs  lexer.rs  lib.rs  mir.rs  parser.rs  prelude.rs  report.rs  resolver.rs
edlc_core/src/ast/: ast_const.rs  ast_error.rs  ast_expression.rs  ast_fn.rs  ast_impl.rs  ast_module.rs  ast_param_env.rs  ast_statement.rs  ast_submodule.rs  ast_trait.rs  ast_type.rs  ast_type_def.rs  ast_where.rs  test.rs
edlc_core/src/ast/ast_expression/: array_index_expr.rs  array_init_expr.rs  as_expr.rs  ast_block.rs  ast_use.rs  binop_expr.rs  bool_expr.rs  break_expr.rs  call_expr.rs  comptime_block.rs  continue_expr.rs  field_expr.rs  for_expr.rs  if_expr.rs  let_expr.rs  literal_expr.rs  loop_expr.rs  match.rs  match_expr.rs  method_expr.rs  prefix_expr.rs  return_expr.rs  type_init_expr.rs
edlc_core/src/ast/ast_type_def/: alias_def.rs  enum_def.rs  struct_def.rs
edlc_core/src/ast/test/: module.rs
edlc_core/src/core/: binop.rs  edl_alias.rs  edl_constraint.rs  edl_error.rs  edl_field.rs  edl_fn.rs  edl_impl.rs  edl_param_env.rs  edl_trait.rs  edl_type.rs  edl_value.rs  edl_var.rs  index_map.rs  type_analysis.rs
edlc_core/src/core/edl_type/: anon.rs  type_alias.rs  type_def.rs
edlc_core/src/core/type_analysis/: constraints.rs  fn_constraint.rs  order.rs  snapshot_vec.rs
edlc_core/src/hir/: code_container.rs  context.rs  hir_expr.rs  hir_fn.rs  hir_impl.rs  hir_report.rs  hir_submod.rs  hir_trait_fn.rs  hir_type.rs  hir_type_def.rs  hir_where.rs  lifetime.rs  translation.rs
edlc_core/src/hir/hir_expr/: hir_array_index.rs  hir_array_init.rs  hir_as.rs  hir_assign.rs  hir_block.rs  hir_break.rs  hir_call.rs  hir_const.rs  hir_continue.rs  hir_deref.rs  hir_env.rs  hir_field.rs  hir_if.rs  hir_let.rs  hir_literal.rs  hir_loop.rs  hir_name.rs  hir_not.rs  hir_ref.rs  hir_return.rs  hir_type.rs  hir_type_def.rs  hir_type_init.rs  hir_use.rs
edlc_core/src/hir/lifetime/: execution_order.rs  liveness.rs
edlc_core/src/issue/: syntax.rs
edlc_core/src/mir/: borrowchecker.rs  debug.rs  mir_backend.rs  mir_comptime.rs  mir_const.rs  mir_executor.rs  mir_expr.rs  mir_funcs.rs  mir_item.rs  mir_let.rs  mir_opt.rs  mir_str.rs  mir_type.rs  mir_vars.rs
edlc_core/src/mir/borrowchecker/: lifetime.rs
edlc_core/src/mir/mir_expr/: mir_array_init.rs  mir_as.rs  mir_assign.rs  mir_block.rs  mir_block_param.rs  mir_break.rs  mir_call.rs  mir_clone.rs  mir_condition.rs  mir_constant.rs  mir_continue.rs  mir_data.rs  mir_esacpe.rs  mir_graph.rs  mir_if.rs  mir_jump.rs  mir_literal.rs  mir_loop.rs  mir_ref.rs  mir_return.rs  mir_temp_var.rs  mir_type_init.rs  mir_variable.rs
edlc_core/src/mir/mir_expr/mir_graph/: acsii_printer.rs  async_analysis.rs  borrow.rs  const_eval.rs  const_propagation.rs  deconstruction.rs  drop_check.rs  lifetime_analysis.rs  router.rs  scope_check.rs  sese.rs  ssa_value.rs  sync.rs  validate.rs  value_path.rs
edlc_core/src/mir/mir_funcs/: comptime_value.rs
edlc_core/src/mir/mir_opt/: const_propagation.rs  lifetime_analysis.rs
edlc_core/src/mir/mir_type/: abi.rs  generation.rs  layout.rs  option.rs  std_types.rs
edlc_core/src/resolver/: namespace.rs
edlc_core/test/test_fracht/src/: foo.eq  main.eq
edlc_core/test/test_fracht/src/foo/: bar.eq
edlc_core/tests/: env.rs
edlc_docs/: Cargo.toml
edlc_docs/src/: dynamic_docs.js  generator.rs  lib.rs
edlc_layout/: Cargo.toml  README.md
edlc_layout/src/: lib.rs
edlc_layout/tests/: derive_layout.rs
edlc_lsp/: Cargo.toml
edlc_lsp/src/: main.rs
edlc_lsp/test/: test.eq
