[package]
name = "edlc_analysis"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Code analysis utils EDL compiler"
repository.workspace = true
authors.workspace = true
readme = "../README.md"
keywords = ["compiler", "edl"]
categories = ["compilers", "science"]

[dependencies]

