[package]
name = "edlc_codegen_cranelift"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Cranelift codegen backend for the EDL compiler"
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["compiler", "edl"]
categories = ["compilers", "science"]

[dependencies]
edlc_core = { path="../edlc_core", version="0.1.1", features=[] }
edlc_layout = { path="../edlc_layout", version="0.1.1" }

log = "0.4.22"
cranelift = { version="0.130.0" }
cranelift-codegen = { version="0.130.0" }
cranelift-jit = { version= "0.130.0", features = ["memmap2"] }
cranelift-module = { version="0.130.0" }
cranelift-native = { version="0.130.0" }
anyhow = "1.0.99"
regex = "1.12.3"

[dev-dependencies]
fern = { version= "0.7.1", features=["colored"] }
humantime = "2.1.0"
edlc_docs = { path="../edlc_docs", version = "0.1.0" }
