[package]
name = "edlc_codegen_cranelift"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Cranelift codegen backend for the EDL compiler"
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["compiler", "edl"]
categories = ["compilers", "science"]

[features]
serde = ["dep:serde"]

[dependencies]
edlc_core = { path="../edlc_core", version="0.2.0", features=[] }
edlc_layout = { path="../edlc_layout", version="0.2.0" }

log = "0.4.22"
cranelift = { version="0.132.0", features=[] }
cranelift-codegen = { version="0.132.0", features=["gimli", "unwind"] }
cranelift-jit = { version= "0.132.0", features = [] }
cranelift-module = { version="0.132.0", features=[] }
cranelift-native = { version="0.132.0", features=[] }
anyhow = "1.0.99"
regex = "1.12.3"
num = "0.4.3"
serde = { version="1.0.228", features=["derive"], optional = true }

libc = "1.0.0-alpha.3"
rustix = { version="1.1.4", features=["mm"] }
gimli = { version="0.33.0", features=["endian-reader", "read", "write"] }

[dev-dependencies]
fern = { version= "0.7.1", features=["colored"] }
humantime = "2.1.0"
edlc_docs = { path="../edlc_docs", version = "0.2.0" }
