[package]
name = "edlc_core"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Core library for the EDL compiler"
repository.workspace = true
authors.workspace = true
readme = "../README.md"
keywords = ["compiler", "edl"]
categories = ["compilers", "science"]

[features]
algebra = ["nalgebra"]
cuda = ["cust"]
allocator_api = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edlc_analysis = { path="../edlc_analysis", version="0.1.1" }

rand = "0.8.5"
log = { version = "0.4.22", features = [] }
anyhow = "1.0.89"
ansi_term = "0.12.1"
serde = { version="1.0.213", features=["derive"] }

nalgebra = { version = "0.32.6", optional = true }
clap = { version = "4.5.44", features = ["derive"] }
cust = { version="0.3.2", git="https://github.com/LateinCecer/Rust-CUDA.git", optional = true }
regex = "1.11.1"

[dev-dependencies]
fern = { version="0.6.2", features = ["colored"] }
humantime = "2.1.0"
serde_json = "1.0.132"
