[package]
name = "edlc_core"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Core library for the EDL compiler"
repository.workspace = true
authors.workspace = true
readme = "../README.md"
keywords = ["compiler", "edl"]
categories = ["compilers", "science"]

[features]
algebra = ["nalgebra"]
cuda = ["cust"]
cudarc = ["clow", "dep:cudarc"]
allocator_api = []
debug_printouts = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edlc_analysis = { path="../edlc_analysis" }

rand = { version="0.10.0", features=["thread_rng"] }
log = { version = "0.4.29", features = [] }
anyhow = "1.0.102"
ansi_term = "0.12.1"
serde = { version="1.0.228", features=["derive"] }

nalgebra = { version = "0.35.0", optional = true }
clap = { version = "4.5.44", features = ["derive"] }
cust = { version="0.3.3", git="https://github.com/LateinCecer/Rust-CUDA.git", optional = true }
clow = { git="https://github.com/LateinCecer/clow", version="^0.1", optional=true }
cudarc = { git="https://github.com/LateinCecer/cudarc", version="^0.19", features=["cuda-13020"], optional=true }
regex = "1.12.3"

[dev-dependencies]
fern = { version="0.7.1", features = ["colored"] }
humantime = "2.3.0"
serde_json = "1.0.132"
