[package]
name = "edlc_docs"
version.workspace = true
edition = "2021"
license.workspace = true
description = "HTML renderer for documentation for the EDL compiler"
repository.workspace = true
authors.workspace = true
readme = "../README.md"
keywords = ["compiler", "edl"]
categories = ["compilers", "science"]

[dependencies]
edlc_core = { path="../edlc_core", version="0.1.1" }
edlc_layout = { path="../edlc_layout", version="0.1.1" }

serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
build_html = "2.5.0"
css-inline = "0.17.0"
urlencoding = "2.1.3"
