[package]
name = "edlc_layout"
description = "derive layouts for EDL types"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["compiler", "edl"]
categories = ["compilers", "science"]

[lib]
proc-macro = true

[dependencies]
edlc_core = { path="../edlc_core", version="0.1.1" }

syn = "2.0.61"
quote = "1.0.36"
proc-macro2 = "1.0.82"
