[package]
name = "edlc_lsp"
version.workspace = true
edition = "2021"
license.workspace = true
description = "EDLc Language Sever Protocol implementation"
repository.workspace = true
authors.workspace = true
readme = "../README.md"
keywords = ["compiler", "edl"]
categories = ["compilers", "science"]

[dependencies]
edlc_core = { path="../edlc_core", version="0.1.1" }

tower-lsp = "0.20.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
tokio-macros = "2.3.0"
